[workspace]
members = ["./crates/lib", "./crates/macros", "./examples/webp"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32", "Win32_Foundation"] }
aviutl-rs = { path = "./crates/lib", features = ["all"] }
anyhow = "1.0.79"
derive-getters = "0.3.0"
num-rational = "0.4.1"
image = "0.24.8"
encoding_rs = "0.8.33"
serde = { version = "1.0.196", features = ["derive"] }
rmp-serde = "1.1.2"
