[package]
name = "aviutl-rs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
output = ["dep:image"]
all = ["output"]

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
derive-getters.workspace = true
num-rational.workspace = true
windows-sys.workspace = true
image = { workspace = true, optional = true }
encoding_rs.workspace = true
serde.workspace = true
rmp-serde.workspace = true
